--- a/views/loginpage.ejs
+++ b/views/loginpage.ejs
@@ -6,7 +6,7 @@
              <div class="forgot">
                 <h4>Forgot password? </h4>
                 <a href="/signup">
-                  <img src="img/adduser.png" width="30" height="30"/>   
+                  <img src="Img/adduser.png" width="30" height="30"/>   
                 </a>
              </div>
            </div>
