--- a/views/signuppage.ejs
+++ b/views/signuppage.ejs
@@ -7,7 +7,7 @@
              <div class="forgot">
                 <h4>Forgot password? </h4>
                 <a href="/">
-               <img src="img/adduser.png" width="30" height="30"/>   
+               <img src="Img/adduser.png" width="30" height="30"/>   
             </a>
              </div>
            </div>
